Post and categories

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,14 @@
 
 <h1>Posts</h1>
 
+<%= render 'nav' %>
+
+<% @posts.each do |post| %>
+     <h1><%= link_to post.title, post %></h1>
+     <p><%= post.content %></p>
+<% end %>
+
+<% if false %>
 <table>
   <thead>
     <tr>
@@ -25,7 +33,7 @@
     <% end %>
   </tbody>
 </table>
-
+<% end %>
 <br>
 
 <%= link_to 'New Post', new_post_path %>
