--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,12 +18,12 @@
 
   <div class="field">
     <%= form.label :content %>
-    <%= form.text_area :content, id: :post_content %>
+    <%= form.text_area :content, size: "60x12",id: :post_content %>
   </div>
 
   <div class="field">
     <%= form.label :category_id %>
-    <%= form.number_field :category_id, id: :post_category_id %>
+    <%= form.collection_select(:category_id, Category.all, :id, :name, {prompt: "Choose a category" }) %><br>
   </div>
 
   <div class="actions">
