--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Content:</strong>
-  <%= @post.content %>
-</p>
+<h1><%= @post.title %></h1>
+<p><%= @post.content %></p>
 
 <p>
   <strong>Category:</strong>
@@ -16,4 +9,5 @@
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<%= link_to "Delete", @post, method: :delete, data: { confirm: "Are you sure?"} %> |
+<%= link_to 'Back',root_path %>
