--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,22 @@
 <html>
   <head>
     <title>TZY Blog</title>
+    <meta charset="utf-8" />
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  <nav class=”navbar navbar-default navbar-fixed-top”>
+    <div class=”container-fluid”>
+    </div>
+  </nav>
+
+    <div class = "container">
+      <%= yield %>
+    </div>
   </body>
 </html>
