--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,42 @@
 <html>
   <head>
     <title>TZY Blog</title>
+    <meta charset="utf-8" />
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+
   </head>
 
   <body>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+
+    <!-- Header -->
+    <div class = "jumbotron">
+      <div class = "container">
+        <h1>Blog of TZY</h1>
+        <p>Perhaps better than reading newspaper. - AhYap</p>
+      </div>
+    </div>
+
+    <!-- Post body -->
+    <div class = "container">
+      <span class = "pull-right">
+        <% if author_signed_in? %>
+          <%= link_to('Edit profile', edit_author_registration_path)  %> </ul> |
+          <%= link_to('Logout', destroy_author_session_path, method: :delete) %>        
+        <% else %>
+            <%= link_to('Sign-In', new_author_session_path)  %> </ul> |
+            <%= link_to('New author?', new_author_registration_path)  %> </ul>
+          
+        <% end %>
+      </span>
+
+        <p id="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+
+        <%= yield %>
+    </div>
   </body>
 </html>
