--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,39 +1,30 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Posts</h1>
+<% content_for :title, "" %>
 
 <%= render 'nav' %>
 
+<div id="posts">
+</div>
 <% @posts.each do |post| %>
-     <h1><%= link_to post.title, post %></h1>
-     <p><%= post.content %></p>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h1><%= link_to post.title, post %></h1>
+      <p><i>
+        Posted <%= timeago_tag post.created_at, :limit => 10.days.ago %>. Category: <%= post.category.name %>
+      </i></p>
+    </div>
+    
+    <div class="panel-body">
+        <% if post.content.scan(/[\w-]+/).size > 200 %>
+          <%= raw post.content.truncate_words(200) %>
+          <%= link_to 'Continue reading', post %>
+
+        <% else %>
+          <%= raw post.content %>
+        <% end %>
+    </div>
+  </div>
 <% end %>
 
-<% if false %>
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Category</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= post.category_id %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<% end %>
 <br>
 
 <%= link_to 'New Post', new_post_path %>
