--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,21 @@
-<p id="notice"><%= notice %></p>
+<% content_for :title, " - " + @post.title %>
 
-<h1><%= @post.title %></h1>
-<p><%= @post.content %></p>
+<div class="page header">
+  <h1><%= @post.title %></h1>
 
-<p>
-  <strong>Category:</strong>
-  <%= @post.category_id %>
-</p>
+  <p>
+    Posted <%= timeago_tag @post.created_at, :limit => 7.days.ago %>. Category: <%= @post.category.name %>
+  </p>
+</div>
+<hr />
 
+<div id="post"><%= raw @post.content %></div>
+
+
+<% if author_signed_in? %>
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to "Delete", @post, method: :delete, data: { confirm: "Are you sure?"} %> |
-<%= link_to 'Back',root_path %>
+<% end %>
+<%= link_to 'Back', root_path %>
+
+<script>
