--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -32,5 +32,5 @@
 <% end %>
 
 <br>
-<script id="dsq-count-scr" src="//EXAMPLE.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="https://tzy.disqus.com/count.js" async></script>
 <%= link_to 'New Post', new_post_path %>
