--- a/app/views/posts/_disqus.html.erb
+++ b/app/views/posts/_disqus.html.erb
@@ -7,7 +7,7 @@
 
 var disqus_config = function () {
 this.page.url = 'https://scalable.tzhongyan.com/<%= url_for(host: ENV['APPLICATION_HOST']) %>'; 
-this.page.identifier = 'post-<%= @post.id %>';
+this.page.identifier = '<%= @post.id %>';
 this.page.title = '<%= @post.title %>';  
 };
 
