--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="panel-footer">
-      <%= link_to "Comment count", 
+      <%= link_to "No comments.", 
       post_path(post, :anchor => "disqus_thread"), 
       :"data-disqus-identifer" => post.id %>
     </div>
@@ -32,5 +32,5 @@
 <% end %>
 
 <br>
-<script id="dsq-count-scr" src="https://tzy.disqus.com/count.js" async></script>
+<script id="dsq-count-scr" src="//tzy.disqus.com/count.js" async></script>
 <%= link_to 'New Post', new_post_path %>
