--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,10 @@
     <div class = "container">
       <span class = "pull-right">
         <% if author_signed_in? %>
-          <%= link_to('Edit profile', edit_author_registration_path)  %> </ul> |
+          <%= link_to('Edit profile', edit_author_registration_path)  %>  |
           <%= link_to('Logout', destroy_author_session_path, method: :delete) %>        
         <% else %>
-            <%= link_to('Sign-In', new_author_session_path)  %> </ul>
+            <%= link_to('Sign-In', new_author_session_path)  %> 
         <% end %>
       </span>
 
