--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
+<% content_for :title, " - New Post " %>
+
 <h1>New Post</h1>
 
 <%= render 'form', post: @post %>
-
-<%= link_to 'Back', root_path %>
