--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
 
     <footer class="blog-footer">
     <div>
-    <a href='/' target='_blank'>
+    <a href='/'>
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-home fa-stack-1x fa-inverse"></i>
@@ -84,7 +84,7 @@
       </span>
     </a>
 
-    <a href='https://github/tzhongyan' target='_blank'>
+    <a href='https://github.com/tzhongyan' target='_blank'>
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
